# nunchuk-android

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  build.gradle  build.gradle.kts  debug.keystore  dummy.keystore  gradle.properties  local.properties  production-keystore.jks  settings.gradle  settings.gradle.kts
.claude/: settings.local.json
baselineprofile/: build.gradle.kts
build-logic/: .gitignore
configs/: dependencies.gradle  submodule-config.gradle
gradle/: libs.versions.toml
nunchuk-app/: .gitignore  build.gradle  build.gradle.kts  google-services.json  proguard.conf  release_notes.txt
nunchuk-arch/: build.gradle  build.gradle.kts
nunchuk-auth/: build.gradle  build.gradle.kts
nunchuk-contact/: build.gradle  build.gradle.kts
nunchuk-core/: build.gradle  build.gradle.kts
nunchuk-database/: build.gradle  build.gradle.kts
nunchuk-domain/: .gitignore  build.gradle  build.gradle.kts
nunchuk-main/: build.gradle  build.gradle.kts
nunchuk-messages/: build.gradle  build.gradle.kts
nunchuk-model/: build.gradle
nunchuk-nativelib/: build.gradle
nunchuk-nativelib/src/main/native/: .install_deps.sh  CMakeLists.txt  deserializer.cpp  deserializer.h  initializer-jni.cpp  nunchuk-jni.cpp  provider.cpp  provider.h  serializer.cpp  serializer.h  signer-jni.cpp  transaction-jni.cpp  wallet-jni.cpp
nunchuk-network/: build.gradle  build.gradle.kts
nunchuk-notifications/: build.gradle  build.gradle.kts
nunchuk-settings/: build.gradle  build.gradle.kts
nunchuk-signer-airgap/: build.gradle
nunchuk-utils/: build.gradle  (+1 more)
(+4697 files in other folders)
